--- a/package.json
+++ b/package.json
@@ -6,19 +6,21 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon api.js"
-
   },
   "author": "Joel Osagie Paul",
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "2.8.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql2": "^2.3.0",
-    "cors": "2.8.1"
+    "jsonwebtoken": "^9.0.1",
+    "mysql2": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
   }
-
 }
