--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
-    "mysql2": "^2.3.0"
+    "mysql2": "^2.3.0",
+    "semver": ">=7.5.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
