--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^2.3.0",
-    "semver": ">=7.5.2"
+    "semver": "^7.5.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
